// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Appointment Slot Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="storyBackground"
  >
    <div
      className="appointmentSlotListContainer"
    >
      <div
        className="listHeader"
      >
        <div
          className="time"
        >
          11:00
        </div>
        <div
          className="add"
          onClick={[Function]}
        >
          <svg>
            add.svg
          </svg>
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer availableAppointment"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
            </div>
            <svg>
              add-person.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer bookedAppointment"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
            </div>
            <svg>
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer booked"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip greenChip"
                >
                  חדש
                </div>
              </div>
            </div>
            <svg>
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer completed"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip greenChip"
                >
                  הושלם
                </div>
              </div>
            </div>
            <svg>
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer no show"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip redChip"
                >
                  לא הגיע
                </div>
              </div>
            </div>
            <svg>
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer cancelled"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip redChip"
                >
                  בוטל לאחרונה
                </div>
              </div>
            </div>
            <svg>
              add-person.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Slot Only Available Appointments 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="storyBackground"
  >
    <div
      className="appointmentSlotListContainer"
    >
      <div
        className="listHeader"
      >
        <div
          className="time"
        >
          11:00
        </div>
        <div
          className="add"
          onClick={[Function]}
        >
          <svg>
            add.svg
          </svg>
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer availableAppointment"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
            </div>
            <svg>
              add-person.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer cancelled"
          onClick={[Function]}
        >
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip redChip"
                >
                  בוטל לאחרונה
                </div>
              </div>
            </div>
            <svg>
              add-person.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
